--- a/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
+
+# jpa가 날리는 sql 볼 수 있다.
+spring.jpa.show-sql = true
+# jpa가 객체보고 테이블 지가 알아서 만드는데 이 기능을 끄고 시작
+spring.jpa.hibernate.ddl-auto=none
